// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: bibliographicReference should return the expected result 1`] = `
Array [
  Object {
    "id": "3002",
    "note": "here is the digital version of the book!",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "identity",
        },
        "role": "from",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "type": "identity",
        },
        "role": "to",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3102",
    "note": "this library book has the lyrics from the song, but we do not have access to the book",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "general",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 500,
            "outPoint": 778.4,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: book should return the expected result 1`] = `
Array [
  Object {
    "id": "2002",
    "note": "That is why transcribedAudio/110 is related to book/24",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "4",
        "label": "songs",
      },
    ],
  },
  Object {
    "id": "2003",
    "note": "That is why book/24 is related to photograph/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "3",
        "label": "placenames",
      },
    ],
  },
  Object {
    "id": "3002",
    "note": "here is the digital version of the book!",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "identity",
        },
        "role": "from",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "type": "identity",
        },
        "role": "to",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3101",
    "note": "this selection from the media item portrays the events in the book",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 1800,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: mediaItem should return the expected result 1`] = `
Array [
  Object {
    "id": "3001",
    "note": "this media item mentions a word in the term",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 100,
            "outPoint": 1200,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            1,
            4,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "to",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3101",
    "note": "this selection from the media item portrays the events in the book",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 1800,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: photograph should return the expected result 1`] = `
Array [
  Object {
    "id": "2003",
    "note": "That is why book/24 is related to photograph/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "3",
        "label": "placenames",
      },
    ],
  },
  Object {
    "id": "2004",
    "note": "That is why photograph/2 is related to spatialFeature/300",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "2",
        "label": "animals",
      },
    ],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: song should return the expected result 1`] = `
Array [
  Object {
    "id": "2005",
    "note": "That is why spatialFeature/300 is related to song/1",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "1",
        "label": "plants",
      },
    ],
  },
  Object {
    "id": "2006",
    "note": "That is why song/1 is related to term/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3102",
    "note": "this library book has the lyrics from the song, but we do not have access to the book",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "general",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 500,
            "outPoint": 778.4,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: spatialFeature should return the expected result 1`] = `
Array [
  Object {
    "id": "2004",
    "note": "That is why photograph/2 is related to spatialFeature/300",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "2",
        "label": "animals",
      },
    ],
  },
  Object {
    "id": "2005",
    "note": "That is why spatialFeature/300 is related to song/1",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "1",
        "label": "plants",
      },
    ],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: term should return the expected result 1`] = `
Array [
  Object {
    "id": "2000",
    "note": "That is why term/2 is related to vocabularyList/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "2006",
    "note": "That is why song/1 is related to term/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3001",
    "note": "this media item mentions a word in the term",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 100,
            "outPoint": 1200,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            1,
            4,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "to",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: transcribedAudio should return the expected result 1`] = `
Array [
  Object {
    "id": "2001",
    "note": "That is why vocabularyList/2 is related to transcribedAudio/110",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "5",
        "label": "legends",
      },
    ],
  },
  Object {
    "id": "2002",
    "note": "That is why transcribedAudio/110 is related to book/24",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "4",
        "label": "songs",
      },
    ],
  },
]
`;

exports[`When querying for edge connections GET /connections/forResource when the composite id for the resource is valid for a resource of type: vocabularyList should return the expected result 1`] = `
Array [
  Object {
    "id": "2000",
    "note": "That is why term/2 is related to vocabularyList/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "2001",
    "note": "That is why vocabularyList/2 is related to transcribedAudio/110",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "5",
        "label": "legends",
      },
    ],
  },
]
`;

exports[`When querying for edge connections GET /connections/notes should return the expected result 1`] = `
Array [
  Object {
    "id": "1",
    "note": "This first 4 letters of this term form a syllable that indicates this is a plant ",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "5",
        "label": "legends",
      },
    ],
  },
  Object {
    "id": "2",
    "note": "This page is about bears",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3",
    "note": "This is the first letter of the list name",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "4",
        "label": "songs",
      },
    ],
  },
  Object {
    "id": "4",
    "note": "there is a placename for this point at the base of the mountain",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "5",
    "note": "this clip talks about songs",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "3",
        "label": "placenames",
      },
    ],
  },
  Object {
    "id": "6",
    "note": "this is the stem of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "7",
    "note": "this is the base of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "point": Array [
            0,
            200,
          ],
          "type": "point2D",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "2",
        "label": "animals",
      },
    ],
  },
  Object {
    "id": "8",
    "note": "this section is the best part of an illustrated book about birds",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "9",
    "note": "found this in the archives",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "1",
        "label": "plants",
      },
    ],
  },
  Object {
    "id": "10",
    "note": "this is a song",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "11",
    "note": "this is an awesome show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "charRange": Array [
            0,
            2,
          ],
          "target": "title",
          "type": "textField",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "1",
        "label": "plants",
      },
    ],
  },
  Object {
    "id": "12",
    "note": "important clip from the show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 650,
            "outPoint": 1230,
          },
          "type": "timeRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "13",
    "note": "this book is hard to track down",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "14",
    "note": "This first 4 letters of this term form a syllable that indicates this is a plant ",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "15",
    "note": "This page is about bears",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "16",
    "note": "This is the first letter of the list name",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "17",
    "note": "this clip talks about songs",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "18",
    "note": "this is the stem of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "19",
    "note": "this is the base of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "20",
    "note": "this section is the best part of an illustrated book about birds",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "21",
    "note": "this is a song",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "22",
    "note": "this is an awesome show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "23",
    "note": "important clip from the show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "2000",
    "note": "That is why term/2 is related to vocabularyList/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "2001",
    "note": "That is why vocabularyList/2 is related to transcribedAudio/110",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "5",
        "label": "legends",
      },
    ],
  },
  Object {
    "id": "2002",
    "note": "That is why transcribedAudio/110 is related to book/24",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "4",
        "label": "songs",
      },
    ],
  },
  Object {
    "id": "2003",
    "note": "That is why book/24 is related to photograph/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "3",
        "label": "placenames",
      },
    ],
  },
  Object {
    "id": "2004",
    "note": "That is why photograph/2 is related to spatialFeature/300",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "2",
        "label": "animals",
      },
    ],
  },
  Object {
    "id": "2005",
    "note": "That is why spatialFeature/300 is related to song/1",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [
      Object {
        "id": "1",
        "label": "plants",
      },
    ],
  },
  Object {
    "id": "2006",
    "note": "That is why song/1 is related to term/2",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3001",
    "note": "this media item mentions a word in the term",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 100,
            "outPoint": 1200,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            1,
            4,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "to",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3002",
    "note": "here is the digital version of the book!",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "identity",
        },
        "role": "from",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "type": "identity",
        },
        "role": "to",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3101",
    "note": "this selection from the media item portrays the events in the book",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 1800,
          },
          "type": "timeRange",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "3102",
    "note": "this library book has the lyrics from the song, but we do not have access to the book",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "general",
        },
        "role": "to",
      },
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 500,
            "outPoint": 778.4,
          },
          "type": "timeRange",
        },
        "role": "from",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: bibliographicReference should return the expected result 1`] = `
Array [
  Object {
    "id": "9",
    "note": "found this in the archives",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "1",
        "label": "plants",
      },
    ],
  },
  Object {
    "id": "13",
    "note": "this book is hard to track down",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "bibliographicReference",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: book should return the expected result 1`] = `
Array [
  Object {
    "id": "2",
    "note": "This page is about bears",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "8",
    "note": "this section is the best part of an illustrated book about birds",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "pageIdentifiers": Array [
            "ix",
          ],
          "type": "pageRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "15",
    "note": "This page is about bears",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "20",
    "note": "this section is the best part of an illustrated book about birds",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "24",
          "type": "book",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: mediaItem should return the expected result 1`] = `
Array [
  Object {
    "id": "11",
    "note": "this is an awesome show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "charRange": Array [
            0,
            2,
          ],
          "target": "title",
          "type": "textField",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "1",
        "label": "plants",
      },
    ],
  },
  Object {
    "id": "12",
    "note": "important clip from the show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 650,
            "outPoint": 1230,
          },
          "type": "timeRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "22",
    "note": "this is an awesome show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "23",
    "note": "important clip from the show",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "mediaItem",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: photograph should return the expected result 1`] = `
Array [
  Object {
    "id": "6",
    "note": "this is the stem of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "lines": Array [
            Array [
              Array [
                0,
                200,
              ],
              Array [
                100,
                300,
              ],
              Array [
                200,
                400,
              ],
              Array [
                250,
                475,
              ],
            ],
          ],
          "type": "freeMultiline",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "7",
    "note": "this is the base of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "point": Array [
            0,
            200,
          ],
          "type": "point2D",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "2",
        "label": "animals",
      },
    ],
  },
  Object {
    "id": "18",
    "note": "this is the stem of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "19",
    "note": "this is the base of the flower",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "photograph",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: song should return the expected result 1`] = `
Array [
  Object {
    "id": "10",
    "note": "this is a song",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 300,
            "outPoint": 500,
          },
          "type": "timeRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
  Object {
    "id": "21",
    "note": "this is a song",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "1",
          "type": "song",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: spatialFeature should return the expected result 1`] = `
Array [
  Object {
    "id": "4",
    "note": "there is a placename for this point at the base of the mountain",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "300",
          "type": "spatialFeature",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: term should return the expected result 1`] = `
Array [
  Object {
    "id": "1",
    "note": "This first 4 letters of this term form a syllable that indicates this is a plant ",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "charRange": Array [
            0,
            3,
          ],
          "target": "term",
          "type": "textField",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "5",
        "label": "legends",
      },
    ],
  },
  Object {
    "id": "14",
    "note": "This first 4 letters of this term form a syllable that indicates this is a plant ",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "term",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: transcribedAudio should return the expected result 1`] = `
Array [
  Object {
    "id": "5",
    "note": "this clip talks about songs",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "timeRange": Object {
            "inPoint": 11000,
            "outPoint": 12950,
          },
          "type": "timeRange",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "3",
        "label": "placenames",
      },
    ],
  },
  Object {
    "id": "17",
    "note": "this clip talks about songs",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;

exports[`When querying for edge connections GET /connections/selfNotes when the resource composite id is valid for a resource of type: vocabularyList should return the expected result 1`] = `
Array [
  Object {
    "id": "3",
    "note": "This is the first letter of the list name",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "charRange": Array [
            0,
            1,
          ],
          "target": "name",
          "type": "textField",
        },
        "role": "self",
      },
    ],
    "tags": Array [
      Object {
        "id": "4",
        "label": "songs",
      },
    ],
  },
  Object {
    "id": "16",
    "note": "This is the first letter of the list name",
    "relatedResources": Array [
      Object {
        "compositeIdentifier": Object {
          "id": "2",
          "type": "vocabularyList",
        },
        "context": Object {
          "type": "general",
        },
        "role": "self",
      },
    ],
    "tags": Array [],
  },
]
`;
